# MAPIE-Educational-Content

./: .gitignore  README.md  make_exercices.sh  pyproject.toml  requirements.txt
notebooks/: MAPIE_for_cosmosqa.ipynb  MAPIE_for_cosmosqa_correction.ipynb  regression-tutorial-correction.ipynb  regression-tutorial.ipynb  regression-use-case-correction.ipynb  regression-use-case.ipynb
notebooks/utils/: dataset.py  viz.py
